# Fake_News_Detection

./: README  README.md  main.py  pyproject.toml
saved_models/: evaluation_results.json  logistic_regression_tf-idf.pkl  logistic_regression_word2vec.pkl  model_metadata.json
