[project]
name = "nlp-fake-news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.14",
    "streamlit>=1.52.0",
    "gensim>=4.3.0",
    "tqdm>=4.67.3",
    "wordcloud>=1.9.6",
]
